--- a/css/styles.css
+++ b/css/styles.css
@@ -74,6 +74,17 @@ footer {
     padding: 0 40px;
   }
 }
+/* -------------------------------------------- */
+/* 見出し関連 */
+/* -------------------------------------------- */
+/* 見出しの共通部分 */
+.heading-common {
+  font-size: 2.5rem;
+  line-height: 1;
+  letter-spacing: 0.1em;
+}
+
+/* セクションの見出し */
 .sec-heading {
   position: relative;
   padding: 40px 0;
@@ -104,12 +115,21 @@ footer {
   line-height: 1;
 }
 
-.sec-sub-heading {
-  font-size: 1.375rem;
+/* セクションの小見出し(h3) */
+.sub-heading__wrapper {
   position: relative;
   text-align: center;
 }
-.sec-sub-heading.--daikei {
+
+.sub-heading {
+  font-size: 1.375rem;
+  text-align: center;
+}
+.sub-heading.--top {
+  position: relative;
+  text-align: center;
+}
+.sub-heading.--top.--daikei {
   background-color: #FFFEF8;
   padding: 18px 0;
   max-width: 480px;
@@ -118,8 +138,33 @@ footer {
   -webkit-clip-path: polygon(20% 0%, 80% 0%, 100% 100%, 0% 100%);
           clip-path: polygon(20% 0%, 80% 0%, 100% 100%, 0% 100%);
 }
+.sub-heading-en {
+  color: #ddd;
+  letter-spacing: 0.15em;
+  font-size: 3.75rem;
+}
+.sub-heading.--ja {
+  position: absolute;
+  left: 50%;
+  -webkit-transform: translateX(-50%);
+  transform: translateX(-50%);
+  bottom: 0;
+}
+
+/* 下層ページのページタイトル */
+.page-heading {
+  padding: 60px 20px;
+  text-align: center;
+  background-color: #262f57;
+  color: #fff;
+}
 
 @media (min-width: 768px) {
+  /* 見出しの共通部分 */
+  .heading-common {
+    font-size: 5.625rem;
+  }
+  /* セクションの見出し */
   .sec-heading {
     font-size: 5.625rem;
     padding-top: 130px;
@@ -134,41 +179,35 @@ footer {
   .sec-heading--ja {
     font-size: 1.25rem;
   }
-  .sec-sub-heading {
+  /* セクションの小見出し(h3) */
+  .sub-heading {
     font-size: 2rem;
   }
-  .sec-sub-heading.--daikei {
+  .sub-heading.--top {
+    position: relative;
+    text-align: center;
+  }
+  .sub-heading.--top.--daikei {
     margin: -128px auto 0;
     padding: 40px 0;
+  }
+  .sub-heading-en {
+    font-size: 6.75rem;
+  }
+  /* 下層ページのページタイトル */
+  .page-heading {
+    padding: 140px 40px;
   }
 }
 /* -------------------------------------------- */
 /* パーツ類 */
 /* -------------------------------------------- */
-.heading-common {
-  text-transform: uppercase;
-  font-size: 2.5rem;
-  line-height: 1;
-  letter-spacing: 0.1em;
-}
-
 .padding-container {
   padding-top: 50px;
   padding-bottom: 100px;
 }
 
-/* ページタイトル */
-.page-heading {
-  padding: 60px 20px;
-  text-align: center;
-  background-color: #262f57;
-  color: #fff;
-}
-
-.en-title {
-  font-family: "Montserrat", sans-serif;
-}
-
+/* ボタン */
 .btn {
   display: block;
   padding: 1em 2em;
@@ -181,7 +220,7 @@ footer {
 }
 .btn--more {
   font-size: 0.875rem;
-  border: 1px solid #000;
+  border: 2px solid #000;
   width: 200px;
   border-radius: 4px;
   background-color: #fff;
@@ -201,8 +240,7 @@ footer {
 .btn--more:hover {
   background-color: #262f57;
   color: #fff;
-  border-top: 2px solid #fff;
-  border-right: 2px solid #fff;
+  border: 2px solid transparent;
 }
 .btn--pageChange {
   font-weight: bold;
@@ -257,6 +295,7 @@ footer {
           transform: translate(-50%, -50%);
 }
 
+/* サムネイル */
 .thum {
   aspect-ratio: 16/9;
   width: 100%;
@@ -268,6 +307,52 @@ footer {
      object-fit: cover;
   width: 100%;
   height: 100%;
+}
+
+/*  パンクズ  */
+.breadcrumbs {
+  background-color: #CED7DC;
+  height: 40px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+@media (min-width: 768px) {
+  .padding-container {
+    padding-top: 100px;
+    padding-bottom: 150px;
+  }
+  .btn--more {
+    font-size: 1rem;
+    width: 230px;
+  }
+  /* Topへ戻るボタン */
+  .top {
+    right: 4%;
+  }
+  .item--responsive {
+    width: 48%;
+  }
+  /*  パンクズ  */
+  .breadcrumbs {
+    height: 50px;
+  }
+}
+@media (min-width: 992px) {
+  .item--responsive {
+    width: 31%;
+  }
+}
+/* -------------------------------------------- */
+/* 補助クラス */
+/* -------------------------------------------- */
+.en-text {
+  font-family: "Montserrat", sans-serif;
+  text-transform: uppercase;
 }
 
 .mt-70 {
@@ -299,41 +384,7 @@ footer {
   padding-right: calc(50vw - 50%);
 }
 
-/*  パンクズ  */
-.breadcrumbs {
-  background-color: #CED7DC;
-  height: 40px;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-}
-
 @media (min-width: 768px) {
-  .heading-common {
-    font-size: 5.625rem;
-  }
-  .padding-container {
-    padding-top: 100px;
-    padding-bottom: 150px;
-  }
-  /* ページタイトル */
-  .page-heading {
-    padding: 140px 40px;
-  }
-  .btn--more {
-    font-size: 1rem;
-    width: 230px;
-  }
-  /* Topへ戻るボタン */
-  .top {
-    right: 4%;
-  }
-  .item--responsive {
-    width: 48%;
-  }
   .mt-70 {
     margin-top: 100px;
   }
@@ -343,15 +394,6 @@ footer {
   }
   .mla {
     margin-left: initial;
-  }
-  /*  パンクズ  */
-  .breadcrumbs {
-    height: 50px;
-  }
-}
-@media (min-width: 992px) {
-  .item--responsive {
-    width: 31%;
   }
 }
 /* -------------------------------------------- */
@@ -1331,7 +1373,7 @@ span.wpcf7-not-valid-tip::before {
   padding: 40px 0;
 }
 .single-top {
-  padding-bottom: 30px;
+  padding-bottom: 40px;
 }
 .single-top__thum {
   border: 2px solid #ddd;
@@ -1343,6 +1385,9 @@ span.wpcf7-not-valid-tip::before {
 .single-top__attention {
   max-width: 600px;
   margin: 40px auto 0;
+}
+.single-detail {
+  background-color: #FAFAFB;
 }
 .single-point__wrapper {
   display: -webkit-box;
@@ -1421,8 +1466,14 @@ span.wpcf7-not-valid-tip::before {
 }
 
 @media (min-width: 768px) {
+  .single__heading-en {
+    font-size: 6.75rem;
+  }
   .single__wrapper {
     padding: 80px 0;
+  }
+  .single-top {
+    padding-bottom: 80px;
   }
   .single-point__wrapper {
     -webkit-box-orient: horizontal;
