profileの文章の修正、画像の追加

--- a/css/styles.css
+++ b/css/styles.css
@@ -1564,6 +1564,10 @@ span.wpcf7-not-valid-tip::before {
   width: 100%;
 }
 
+.about-body-list li::before {
+  content: "・";
+}
+
 /* 経歴 */
 .career__lists {
   width: 100%;
