--- a/css/styles.scss
+++ b/css/styles.scss
@@ -713,11 +713,12 @@ body.active{
 /* スクロール */
 .scrolldown{
   position:absolute;
-  bottom: 0px;
-  left: 50%;
+  bottom: 50px;
+  left: 20px;
   z-index: 1;
 }
 
+/* スクロールバーの文字 */
 .scrolldown span{
   position: absolute;
   left:10px;
@@ -730,22 +731,23 @@ body.active{
   writing-mode: vertical-rl;
 }
 
+/* スクロールバーの光 */
 .scrolldown:before {
   content: "";
   position: absolute;
   bottom:0;
   left:-4px;
   width:10px;
-  height:10px;
+  height:16px;
   border-radius: 50%;
   background: $accentColor;
   animation:
-  circlemove 1.6s ease-in-out infinite,
-  cirlemovehide 1.6s ease-out infinite;
+  circlemove 2s ease-in-out infinite,
+  cirlemovehide 2s ease-out infinite;
 }
 
 @keyframes circlemove{
-  0%{bottom:45px;}
+  0%{bottom:120px;}
   100%{bottom:-5px;}
 }
 
@@ -756,13 +758,14 @@ body.active{
   100%{opacity:0;}
 }
 
+/* スクロールバーの棒 */
 .scrolldown:after{
   content:"";
   position: absolute;
   bottom:0;
   left:0;
   width:2px;
-  height: 50px;
+  height: 120px;
   background:#eee;
   }
 
@@ -773,6 +776,12 @@ body.active{
   .site-title{
     font-size: rem(80);
     padding-top: 240px;
+  }
+
+  /* スクロール */
+  .scrolldown{
+    bottom: 0px;
+    left: 50%;
   }
 }
 
