--- a/css/styles.css
+++ b/css/styles.css
@@ -404,6 +404,7 @@ footer {
   width: 100%;
   color: #fff;
   background-color: #000;
+  display: none;
 }
 .header.fadein {
   background-color: rgba(38, 47, 87, 0.5);
@@ -619,57 +620,83 @@ body.active {
 /* mv */
 /* --------------------------------------------- */
 .mv {
-  background: url(../images/huvest-top-image.png) center left/cover no-repeat;
   height: 100vh;
-  height: calc(100vh - 70px);
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
   position: relative;
-}
-.mv::before {
-  content: "";
   background-color: #262f57;
   width: 100%;
-  height: 100%;
-  display: block;
-  position: absolute;
-  top: 0;
-  left: 0;
-  z-index: 1;
-  -webkit-clip-path: polygon(0 0, 30% 0, 70% 100%, 0% 100%);
-          clip-path: polygon(0 0, 30% 0, 70% 100%, 0% 100%);
+}
+.mv__bg-area {
+  width: 100%;
 }
 .mv::after {
   content: "";
   display: block;
-  width: 100%;
+  width: 16%;
   height: 100%;
-  background-color: rgba(0, 0, 0, 0.55);
+  background-color: #262f57;
   position: absolute;
-  left: 0;
+  right: 0;
   top: 0;
+  z-index: 2;
+}
+.mv__bar {
+  background-color: #E6B422;
+  position: absolute;
+  z-index: 3;
+}
+.mv__bar.--cross {
+  left: 0;
+  height: 14px;
+  width: 100%;
+}
+.mv__bar.--cross::after {
+  content: "";
+  width: 100%;
+  height: 6px;
+  background-color: #fff;
+  position: absolute;
+  bottom: -20px;
+}
+.mv__bar.--vertical {
+  width: 14px;
+  height: 100%;
+  top: 0;
+  right: 45px;
+}
+.mv__bar.--vertical::after {
+  content: "";
+  width: 6px;
+  height: 100%;
+  background-color: #fff;
+  position: absolute;
+  bottom: 0;
+  right: -20px;
 }
 
 .site-title {
   color: #fff;
   letter-spacing: 0.15em;
-  font-size: 2.0625rem;
-  z-index: 1;
-  padding: 210px 0 140px;
+  font-size: 33px;
+  font-size: min(max(33px, 2.0625rem + (1vw - 3.75px) * 5.1934), 80px);
+  padding: 200px 0px;
   position: relative;
+  z-index: 1;
 }
-
-.flex {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+.site-title::before {
+  content: "";
+  height: 100%;
+  width: 100%;
+  display: block;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: -1;
+  background: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.8))), url(../images/clinic-top.png) center/cover no-repeat;
+  background: linear-gradient(rgba(0, 0, 0, 0.8)), url(../images/clinic-top.png) center/cover no-repeat;
+  margin-left: calc(50% - 50vw);
+  margin-right: calc(50% - 50vw);
+  padding-left: calc(50vw - 50%);
+  padding-right: calc(50vw - 50%);
 }
 
 /* スクロール */
@@ -763,13 +790,32 @@ body.active {
   background: #eee;
 }
 
+@media (min-width: 500px) {
+  .mv::after {
+    width: 8%;
+  }
+}
 @media (min-width: 768px) {
-  .mv {
-    height: calc(100vh - 100px);
+  .mv::after {
+    width: 20%;
+  }
+  .mv__bar.--cross {
+    height: 24px;
+  }
+  .mv__bar.--cross::after {
+    height: 10px;
+    bottom: -40px;
+  }
+  .mv__bar.--vertical {
+    width: 24px;
+    right: 20%;
+  }
+  .mv__bar.--vertical::after {
+    width: 10px;
+    right: -40px;
   }
   .site-title {
-    font-size: 5rem;
-    padding-top: 240px;
+    padding: 150px 0px;
   }
   /* スクロール */
   .scrolldown {
