--- a/css/styles.css
+++ b/css/styles.css
@@ -622,22 +622,27 @@ body.active {
 .mv {
   height: 100vh;
   position: relative;
-  background-color: #262f57;
   width: 100%;
 }
-.mv__bg-area {
-  width: 100%;
-}
-.mv::after {
+.mv::before, .mv::after {
   content: "";
   display: block;
-  width: 16%;
+  width: 100%;
   height: 100%;
-  background-color: #262f57;
   position: absolute;
-  right: 0;
   top: 0;
-  z-index: 2;
+  background-color: #262f57;
+  z-index: 1;
+}
+.mv::before {
+  left: 0;
+  -webkit-clip-path: polygon(0 0, 0% 100%, 50% 0);
+          clip-path: polygon(0 0, 0% 100%, 50% 0);
+}
+.mv::after {
+  right: 0;
+  -webkit-clip-path: polygon(50% 100%, 100% 100%, 100% 0);
+          clip-path: polygon(50% 100%, 100% 100%, 100% 0);
 }
 .mv__bar {
   background-color: #E6B422;
@@ -673,6 +678,15 @@ body.active {
   right: -20px;
 }
 
+.film {
+  background: rgba(0, 0, 0, 0.6);
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  left: 0;
+  top: 0;
+}
+
 .site-title {
   color: #fff;
   letter-spacing: 0.15em;
@@ -680,31 +694,38 @@ body.active {
   font-size: min(max(33px, 2.0625rem + (1vw - 3.75px) * 5.1934), 80px);
   padding: 200px 0px;
   position: relative;
-  z-index: 1;
-}
-.site-title::before {
-  content: "";
-  height: 100%;
-  width: 100%;
-  display: block;
-  position: absolute;
-  top: 0;
-  left: 0;
-  z-index: -1;
-  background: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.8))), url(../images/clinic-top.png) center/cover no-repeat;
-  background: linear-gradient(rgba(0, 0, 0, 0.8)), url(../images/clinic-top.png) center/cover no-repeat;
-  margin-left: calc(50% - 50vw);
-  margin-right: calc(50% - 50vw);
-  padding-left: calc(50vw - 50%);
-  padding-right: calc(50vw - 50%);
+  z-index: 2;
 }
 
 /* スクロール */
 .scrolldown {
   position: absolute;
-  bottom: 50px;
-  left: 20px;
-  z-index: 1;
+  bottom: 1%;
+  right: 30%;
+  z-index: 10;
+  /* スクロールバーの棒 */
+  /* スクロールバーの光 */
+}
+.scrolldown::before, .scrolldown::after {
+  content: "";
+  position: absolute;
+}
+.scrolldown::after {
+  bottom: 0;
+  left: 10%;
+  width: 2px;
+  height: 50px;
+  background: #eee;
+}
+.scrolldown::before {
+  bottom: 0;
+  left: -4px;
+  width: 10px;
+  height: 16px;
+  border-radius: 50%;
+  background: #FFD54D;
+  -webkit-animation: circlemove 1.8s ease-in-out infinite, cirlemovehide 1.8s ease-out infinite;
+          animation: circlemove 1.8s ease-in-out infinite, cirlemovehide 1.8s ease-out infinite;
 }
 
 /* スクロールバーの文字 */
@@ -720,23 +741,9 @@ body.active {
   writing-mode: vertical-rl;
 }
 
-/* スクロールバーの光 */
-.scrolldown:before {
-  content: "";
-  position: absolute;
-  bottom: 0;
-  left: -4px;
-  width: 10px;
-  height: 16px;
-  border-radius: 50%;
-  background: #FFD54D;
-  -webkit-animation: circlemove 2s ease-in-out infinite, cirlemovehide 2s ease-out infinite;
-          animation: circlemove 2s ease-in-out infinite, cirlemovehide 2s ease-out infinite;
-}
-
 @-webkit-keyframes circlemove {
   0% {
-    bottom: 120px;
+    bottom: 50px;
   }
   100% {
     bottom: -5px;
@@ -745,7 +752,7 @@ body.active {
 
 @keyframes circlemove {
   0% {
-    bottom: 120px;
+    bottom: 50px;
   }
   100% {
     bottom: -5px;
@@ -779,26 +786,7 @@ body.active {
     opacity: 0;
   }
 }
-/* スクロールバーの棒 */
-.scrolldown:after {
-  content: "";
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  width: 2px;
-  height: 120px;
-  background: #eee;
-}
-
-@media (min-width: 500px) {
-  .mv::after {
-    width: 8%;
-  }
-}
 @media (min-width: 768px) {
-  .mv::after {
-    width: 20%;
-  }
   .mv__bar.--cross {
     height: 24px;
   }
@@ -814,13 +802,9 @@ body.active {
     width: 10px;
     right: -40px;
   }
-  .site-title {
-    padding: 150px 0px;
-  }
   /* スクロール */
   .scrolldown {
-    bottom: 0px;
-    left: 50%;
+    right: 100px;
   }
 }
 /* -------------------------------------------- */
