--- a/css/styles.scss
+++ b/css/styles.scss
@@ -666,34 +666,36 @@ body.active{
 .mv{
   height: 100vh;
   position: relative;
-  background-color: $mainColor;
   width: 100%;
-  
-  &__bg-area{
-    width: 100%;
-    // z-index: 300;
-    // position: absolute;
-    // top:0;
-    // left: 0;
-    // height: 100%;
-    // background-color: #000;
-  }
 
-  //右側の紺の部品
+  //あしらい
+  &::before,
   &::after{
     content: "";
     display: block;
-    width: 16%;
+    width: 100%;
     height: 100%;
-    background-color: $mainColor;
     position: absolute;
-    right: 0;
     top: 0;
-    z-index: 2;
+    background-color: $mainColor;
+    z-index: 1;
+  }
+
+  //左のあしらい
+  &::before{
+    left: 0;
+    clip-path: polygon(0 0, 0% 100%, 50% 0);
+  }
+
+  //右のあしらい
+  &::after{
+    right: 0;
+    clip-path: polygon(50% 100%, 100% 100%, 100% 0);
   }
 
   //黄色のバー
   &__bar{
+
     background-color: #E6B422;
     position: absolute;
     z-index: 3;
@@ -734,6 +736,15 @@ body.active{
   } 
 }
 
+//スクリーン
+.film{
+  background: rgba(0, 0, 0, .6);
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  left: 0;
+  top: 0;
+}
 .site-title{
   color: #fff;
   letter-spacing: 0.15em;
@@ -741,32 +752,43 @@ body.active{
   font-size: min(max(33px, calc(2.0625rem + ((1vw - 3.75px) * 5.1934))), 80px);
   padding: 200px 0px;
   position: relative;
-  z-index: 1;
-  
-
-  &::before{
-    content: "";
-    height: 100%;
-    width: 100%;
-    display: block;
-    position: absolute;
-    top: 0;
-    left: 0;
-    z-index: -1;
-    background: linear-gradient(rgba(0, 0, 0, 0.8)), url(../images/clinic-top.png) center / cover no-repeat;
-    margin-left: calc(50% - 50vw);
-    margin-right: calc(50% - 50vw);
-    padding-left: calc(50vw - 50%);
-    padding-right: calc(50vw - 50%);
-  }
+  z-index: 2;
 }
 
 /* スクロール */
 .scrolldown{
   position:absolute;
-  bottom: 50px;
-  left: 20px;
-  z-index: 1;
+  bottom: 1%;
+  right: 30%;
+  z-index: 10;
+
+  &::before,
+  &::after{
+    content:"";
+    position: absolute;
+  }
+
+  /* スクロールバーの棒 */
+  &::after{
+    bottom:0;
+    left:10%;
+    width:2px;
+    height: 50px;
+    background:#eee;
+  }
+
+  /* スクロールバーの光 */
+  &::before {
+    bottom:0;
+    left:-4px;
+    width:10px;
+    height:16px;
+    border-radius: 50%;
+    background: $accentColor;
+    animation:
+    circlemove 1.8s ease-in-out infinite,
+    cirlemovehide 1.8s ease-out infinite;
+  }
 }
 
 /* スクロールバーの文字 */
@@ -782,23 +804,8 @@ body.active{
   writing-mode: vertical-rl;
 }
 
-/* スクロールバーの光 */
-.scrolldown:before {
-  content: "";
-  position: absolute;
-  bottom:0;
-  left:-4px;
-  width:10px;
-  height:16px;
-  border-radius: 50%;
-  background: $accentColor;
-  animation:
-  circlemove 2s ease-in-out infinite,
-  cirlemovehide 2s ease-out infinite;
-}
-
 @keyframes circlemove{
-  0%{bottom:120px;}
+  0%{bottom: 50px;}
   100%{bottom:-5px;}
 }
 
@@ -809,32 +816,8 @@ body.active{
   100%{opacity:0;}
 }
 
-/* スクロールバーの棒 */
-.scrolldown:after{
-  content:"";
-  position: absolute;
-  bottom:0;
-  left:0;
-  width:2px;
-  height: 120px;
-  background:#eee;
-  }
-
-  @media (min-width: 500px){
-
-    .mv{
-      &::after{
-        width: 8%;
-      }
-    }
-  }
-
-  @media (min-width: 768px){
+@media (min-width: 768px){
   .mv{
-
-    &::after{
-      width: 20%;
-    }
     
     //黄色のバー
     &__bar{
@@ -862,15 +845,9 @@ body.active{
     } 
   }
 
-  .site-title{
-    padding: 150px 0px;
-    // padding: 150px 0px 150px 150px;
-  }
-
   /* スクロール */
   .scrolldown{
-    bottom: 0px;
-    left: 50%;
+    right: 100px;
   }
 }
 
