--- a/css/styles.scss
+++ b/css/styles.scss
@@ -181,7 +181,7 @@ footer {
 
 /* 下層ページのページタイトル */
 .page-heading{
-  padding: 60px 20px;
+  padding: 110px 20px 60px;
   text-align: center;
   background-color: $mainColor;
   color: #fff;
@@ -235,7 +235,7 @@ footer {
 
   /* 下層ページのページタイトル */
   .page-heading{
-    padding: 140px 40px;
+    padding: 200px 40px 140px;
   }
 
 
@@ -458,8 +458,11 @@ footer {
   height: 70px;
   width: 100%;
   color: #fff;
-  background-color: #000;
-  display: none;
+  background-color: rgba($mainColor, 0.8);
+  position: absolute;
+  right: 0;
+  top: 0;
+  z-index: 4;
   
   &.fadein{
     background-color: rgba(38, 47, 87 , 0.5);
@@ -651,6 +654,7 @@ body.active{
 
   .gnav--pc{
     display: block;
+    // display: none;
   }
 }
 
@@ -703,6 +707,7 @@ body.active{
     //横
     &.--cross{
       left: 0;
+      bottom: 15%;
       height: 14px;
       width: 100%;
 
@@ -745,12 +750,14 @@ body.active{
   left: 0;
   top: 0;
 }
+
 .site-title{
   color: #fff;
   letter-spacing: 0.15em;
   font-size: 33px;
   font-size: min(max(33px, calc(2.0625rem + ((1vw - 3.75px) * 5.1934))), 80px);
   padding: 200px 0px;
+  padding: 270px 0px 200px;
   position: relative;
   z-index: 2;
 }
