--- a/css/styles.scss
+++ b/css/styles.scss
@@ -652,6 +652,7 @@ body.active{
   height: 100vh;
   position: relative;
   width: 100%;
+  // background: url(../images/blog-image.png);
 
   //あしらい
   &::before,
@@ -730,6 +731,44 @@ body.active{
   position: absolute;
   left: 0;
   top: 0;
+}
+
+.mvSwiper{
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: -1;
+}
+
+
+.mvSwiper {
+  width: 100%;
+  height: 100%;
+
+  .swiper-wrapper {
+
+    .swiper-slide {
+      overflow: hidden;
+    }
+    .swiper-slide-prev,
+    .swiper-slide-active,
+    .swiper-slide-duplicate-active {
+      img{
+        animation: zoom 10s linear 0s 1 normal both;
+        height: 100%;
+        object-fit: cover;
+      }
+    }
+  }
+}
+
+@keyframes zoom {
+  0% {
+    transform: scale(1);
+  }
+  100% {
+    transform: scale(1.15);
+  }
 }
 
 .site-title{
