--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 @charset "UTF-8";
 
 /*
-Theme Name: my-portfolio
+Theme Name: my-portfolio 2022.7.25
 Description:ポートフォリオ
 Version: 1.0.0
 Author: KobayasHi Yuta
