--- a/css/styles.css
+++ b/css/styles.css
@@ -901,6 +901,7 @@ body.active {
   line-height: 1.6;
   font-size: 14px;
   letter-spacing: 0.15em;
+  min-height: 110px;
 }
 
 .slideBtn {
@@ -1071,6 +1072,9 @@ body.active {
   .works-top__item-title {
     font-size: 1.25rem;
     padding: 30px 20px;
+  }
+  .works-top__item-content {
+    min-height: 90px;
   }
   .slideBtn {
     width: 40px;
@@ -1327,6 +1331,10 @@ body.active {
   transition: -webkit-transform 0.4s;
   transition: transform 0.4s;
   transition: transform 0.4s, -webkit-transform 0.4s;
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
 }
 
 @media (min-width: 768px) {
@@ -1512,6 +1520,44 @@ span.wpcf7-not-valid-tip::before {
   margin-top: 20px;
   letter-spacing: 0.15em;
 }
+.single__site-image-wrapper {
+  margin-top: 60px;
+  /* pcでのイメージ */
+  /* spでのイメージ */
+  /* トグルボタン */
+}
+.single__site-image-wrapper .pc-image-wrapper {
+  margin-bottom: 30px;
+}
+.single__site-image-wrapper .pc-image-wrapper .pc-image {
+  width: 100%;
+  display: none;
+}
+.single__site-image-wrapper .sp-image-wrapper .sp-image {
+  display: none;
+  width: 100%;
+}
+.single__site-image-wrapper .toggle-btn {
+  cursor: pointer;
+  color: #333;
+  background-color: #fff;
+  border: 2px solid #000;
+  padding: 8px;
+  display: inline-block;
+  border-radius: 6px;
+  font-weight: bold;
+  margin-bottom: 8px;
+}
+.single__site-image-wrapper .toggle-btn i {
+  margin-right: 4px;
+}
+
+/* 注釈 */
+.click-open {
+  font-size: 0.75rem;
+  margin-bottom: 16px;
+  color: #808080;
+}
 
 .single-content {
   margin: 40px auto 0;
@@ -1527,6 +1573,9 @@ span.wpcf7-not-valid-tip::before {
 }
 .single-content__text {
   letter-spacing: 0.15em;
+}
+.single-content__text.--list::before {
+  content: "・";
 }
 
 .pagination {
@@ -1586,6 +1635,21 @@ span.wpcf7-not-valid-tip::before {
   .single-point__heading {
     font-size: 1.25rem;
   }
+  .single__site-image-wrapper {
+    /* pcでのイメージ */
+    /* トグルボタン */
+  }
+  .single__site-image-wrapper .sp-image-wrapper {
+    width: 50%;
+  }
+  .single__site-image-wrapper .toggle-btn {
+    -webkit-transition: background-color 0.4s, color 0.4s;
+    transition: background-color 0.4s, color 0.4s;
+  }
+  .single__site-image-wrapper .toggle-btn:hover {
+    background: #000;
+    color: #fff;
+  }
   .single-content {
     margin-top: 60px;
   }
@@ -1606,6 +1670,32 @@ span.wpcf7-not-valid-tip::before {
   }
   .pagination {
     margin: 80px auto 0;
+  }
+  /* 注釈 */
+  .click-open {
+    font-size: 0.875rem;
+    margin-bottom: 24px;
+  }
+}
+@media (min-width: 992px) {
+  .single__site-image-wrapper {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    margin-top: 80px;
+    /* pcでのイメージ */
+    /* spでのイメージ */
+  }
+  .single__site-image-wrapper .pc-image-wrapper {
+    margin-bottom: 0px;
+    width: 70%;
+  }
+  .single__site-image-wrapper .sp-image-wrapper {
+    margin-bottom: 0px;
+    width: 28%;
   }
 }
 /* -------------------------------------------- */
