--- a/css/styles.css
+++ b/css/styles.css
@@ -319,6 +319,10 @@ footer {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  font-size: 0.875rem;
+}
+.breadcrumbs i {
+  padding: 0 4px;
 }
 
 @media (min-width: 768px) {
@@ -420,7 +424,7 @@ footer {
   -webkit-animation: fadein 0.4s ease;
           animation: fadein 0.4s ease;
   height: 50px;
-  z-index: 10000;
+  z-index: 10;
 }
 .header__wrapper {
   height: 100%;
@@ -969,12 +973,11 @@ body.active {
   margin-top: 10px;
   min-height: 48px;
 }
+.practice__explain .fa-solid {
+  margin-left: 8px;
+}
 .practice__image {
   margin-top: 20px;
-}
-
-.fa-solid {
-  margin-left: 8px;
 }
 
 .swiper-area {
@@ -1578,6 +1581,43 @@ span.wpcf7-not-valid-tip::before {
   content: "・";
 }
 
+.pagination-btn {
+  width: 40px;
+  height: 100px;
+  position: fixed;
+  top: 50%;
+}
+.pagination-btn.left {
+  left: 0;
+}
+.pagination-btn.right {
+  right: 0;
+}
+
+.pagination-btn a {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  background-color: rgba(38, 47, 87, 0.5);
+  top: 50%;
+  width: 100%;
+  height: 100%;
+}
+
+.pagination-btn.left a {
+  border-radius: 0% 60% 60% 0%;
+}
+
+.pagination-btn.right a {
+  border-radius: 60% 0% 0% 60%;
+}
+
 .pagination {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -1588,6 +1628,9 @@ span.wpcf7-not-valid-tip::before {
   min-width: 270px;
   width: 60%;
   margin: 40px auto 0;
+}
+.pagination i {
+  padding: 0 4px;
 }
 
 .to-works a,
@@ -1944,7 +1987,7 @@ span.wpcf7-not-valid-tip::before {
   height: 100%;
   top: 0;
   left: 0;
-  z-index: 1;
+  z-index: 100;
 }
 
 /* 閉じるボタン */
@@ -1988,6 +2031,7 @@ span.wpcf7-not-valid-tip::before {
 .modal-image-wrapper img {
   max-width: 70%;
   max-height: 70%;
+  height: 100%;
   position: fixed;
   top: 50%;
   left: 50%;
